--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,34 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #b6ccdf;
+  --primary: #2b86d4;
+  --foreground: #545454;
 }
 
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
 
 body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.botao-personalizado {
+  width: 20rem;
+  background-color: var(--primary);
+  color: white;
+  padding: 0.75rem 0;
+  border-radius: 0.5rem;
+  font-weight: bold;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.2);
+  transition: background-color 0.3s;
+}
+
+.botao-personalizado:hover {
+  background-color: #056fcc;
 }
